--- a/index.html
+++ b/index.html
@@ -19,16 +19,13 @@
 <body>
 
     <div class="container">
-        <h1>Beyond Verbal</h1>
+        <h1>Ambio Test</h1>
         <hr /> 
 		
 		<section class="experiment" style="padding: 5px;">
             <label for="time-interval">Time Interval (milliseconds):</label>
-            <input type="text" id="time-interval" value="5000">ms
-
-            <input id="left-channel" type="checkbox" checked style="width:auto;">
-            <label for="left-channel">Record Mono Audio if WebAudio API is selected (above)</label>
-
+            <input type="text" id="time-interval" value="14000">ms
+			
             <br>
             <br>
 
