--- a/testPages/recordTest.html
+++ b/testPages/recordTest.html
@@ -4,8 +4,8 @@
 <head>
     <title>Record Test</title>
 
-	<script src="js/record/MediaStreamRecorder.js"></script>
-	<script src="js/record/gumadapter.js"></script>
+	<script src="../js/record/MediaStreamRecorder.js"></script>
+	<script src="../js/record/gumadapter.js"></script>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -38,7 +38,7 @@
             <div id="audios-container"></div>
         </section>
 
-		<script src="js/record/record.js"></script>
+		<script src="../js/record/record.js"></script>
 
       
 
